# my_math_lib

C#/: PolandNotation.sln  README.md
C#/MathExpressions/Aveezan/Math/Expressions/: Class1.cs  MathExpression.cs
C#/MyMathLibrary/: MyMathLibrary.sln
C#/MyMathLibrary/MyMathLibrary/Aveezan/Math/Expressions/: MathExpression.cs
C#/PolandNotation/: PolishNotation.csproj  Program.cs
C++/MyMathLibrary/: MyMathLibrary.sln
C++/MyMathLibrary/MyMathLibrary/: CppHelperLibrary.cpp  CppHelperLibrary.h  MyMathLibrary.vcxproj  MyMathLibrary.vcxproj.filters  Source.cpp
C++/MyMathLibrary/MyMathLibrary/x64/Debug/: MyMathLibrary.exe.recipe  MyMathLibrary.ilk  vc143.idb
C++/MyMathLibrary/MyMathLibrary/x64/Debug/MyMathLibrary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MyMathLibrary.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CPP/: CMakeLists.txt
CPP/lib/: CMakeLists.txt  CppHelperLibrary.cpp  CppHelperLibrary.h
CPP/src/: CMakeLists.txt  Source.cpp
